button to div to fix vertical alignment

--- a/css/style.css
+++ b/css/style.css
@@ -3748,7 +3748,7 @@ blockquote, ul, p {
   color: #20459a;
   box-shadow: 0 0px 0px 0 rgb(0, 0, 0), 0 1px 10px 0 rgba(0, 0, 0, 0.3);
 
-  font-size: 2.5rem;
+  font-size: 2rem;
   font-weight: bolder;
 
   cursor: pointer;
